<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="4dp"
    android:paddingVertical="4dp"
    android:padding="16dp">

    <!-- Pokemon Logo inside CardView for rounded corners and elevation -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_pokemon_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        app:cardCornerRadius="1000dp"
        android:elevation="10dp">

        <ImageView
            android:id="@+id/image_pokemon_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:contentDescription="@string/default_description"
            android:src="@drawable/pokemon_poster"
            android:background="@drawable/circle_avatar_background"
            android:scaleType="centerCrop"
            android:clipToOutline="true" />

    </androidx.cardview.widget.CardView>

    <!-- Welcome Text -->
    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_the_pokemon_world"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_below="@id/card_pokemon_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"/>

    <!-- Start Button -->
    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_exploring"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/button_background"
        android:layout_below="@id/text_welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:elevation="10dp" />

    <!-- Disclaimer Text -->
    <TextView
        android:id="@+id/text_disclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disclaimer_this_is_a_fan_made_app_and_is_not_affiliated_with_nintendo"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:textAlignment="center"
        android:layout_below="@id/button_start"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"/>

</RelativeLayout>
